It will handle mixcase entries for both player_1 and player_2.

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,8 +3,14 @@
 
 <form action="/score">
   <div class="form-group">
+     <label for="score">Player 1: Enter Rock Paper or Scissors</label>
+     <input id="score" name="score" class="form-control" type="text">
+  </div>
+
+  <div class="form-group">
      <label for="score">Enter in a word to see your Scrabble Score</label>
      <input id="score" name="score" class="form-control" type="text">
   </div>
+
   <button type="submit" class="btn-success">Send</button>
 </form>
