--- a/views/index.erb
+++ b/views/index.erb
@@ -1,16 +1,16 @@
 <h1>Welcome to Rock, Paper, Scissors</h1>
-<h2>Where men play rough and the sheep are scared</h2>
+<h3>Where men play rough and the sheep are scared</h3>
 
-<form action="/score">
+<form action="/results"> 
   <div class="form-group">
-     <label for="score">Player 1: Enter Rock Paper or Scissors</label>
-     <input id="score" name="score" class="form-control" type="text">
+     <label for="player_1">Player 1: Enter Rock Paper or Scissors</label>
+     <input id="player_1" name="player_1" class="form-control" type="password">
   </div>
 
   <div class="form-group">
-     <label for="score">Enter in a word to see your Scrabble Score</label>
-     <input id="score" name="score" class="form-control" type="text">
+     <label for="player_2">Player 1: Enter Rock Paper or Scissors</label>
+     <input id="player_2" name="player_2" class="form-control" type="password">
   </div>
 
-  <button type="submit" class="btn-success">Send</button>
+  <button type="submit" class="btn-success">Submit</button>
 </form>
