--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,8 @@
   <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <meta name='definition' content='Scrabble Score'>
-    <title>Scrabble Score</title>
+    <meta name='definition' content='Rock, Paper, Scissors'>
+    <title>Rock, Paper, Scissors</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
 
   </head>
